[package]
name = "htmd"
version = "0.3.0"
edition = "2024"
authors = ["letmutex"]
description = "A turndown.js inspired HTML to Markdown converter."
license = "Apache-2.0"
repository = "https://github.com/letmutex/htmd"
homepage = "https://github.com/letmutex/htmd"
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "parsing"]
readme = "README.md"

[dependencies]
html5ever = "0.35.0"
markup5ever_rcdom = "0.35.0"
html-escape = "0.2.13"

[dev-dependencies]
scraper = "0.23.1"
criterion = { version = "0.7", features = ["html_reports"] }
pretty_assertions = "1.4.1"
indoc = "2.0.6"

[[bench]]
name = "convert_bench"
harness = false
