[package]
name = "htmd"
version = "0.5.0"
edition = "2024"
authors = ["letmutex"]
description = "A turndown.js inspired HTML to Markdown converter."
license = "Apache-2.0"
repository = "https://github.com/letmutex/htmd"
homepage = "https://github.com/letmutex/htmd"
keywords = ["html", "markdown", "converter"]
categories = ["text-processing", "parsing"]
readme = "README.md"

[dependencies]
html5ever = "0.36"
# Used in integration tests, so it must appear here. It's macros only, adding
# no code to the resulting binary.
indoc = "2.0.6"
markup5ever_rcdom = "0.36"
phf = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
scraper = "0.25"
criterion = { version = "0.8", features = ["html_reports"] }
pretty_assertions = "1.4.1"

[[bench]]
name = "convert_bench"
harness = false

[[bench]]
name = "str_concat_bench"
harness = false

[profile.release]
debug = true
